# Fractal3D-Explorer

./: CMakeLists.txt  README.md  main.cpp
Project1/: ECE_232E_Project1.ipynb
include/: camera.h  renderer.h  scene.h  shader.h  ubo_bindings.h  ui.h
include/fractals/: config.h  fractal.h  julia4D.h  mandelbox.h  mandelbulb.h  menger.h  sierpinski.h  unkown.h
shaders/: DE.glsl  julia4D.glsl  mandelbox.glsl  mandelbulb.glsl  menger.glsl  raymarching.comp  screen.frag  screen.vert  sierpinski.glsl  test.comp  unkown.glsl
shaders/legacy/: julia4d.fs.glsl  menger.fs.glsl
src/: camera.cpp  camera.h  mandelbox_renderer.cpp  mandelbox_renderer.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  ui.cpp
src/fractals/: fractal.h  julia4D.h  mandelbox.h  mandelbulb.h  menger.h  sierpinski.h
src/renderers/: julia4D_renderer.cpp  julia4D_renderer.h  mandelbox_renderer.cpp  mandelbox_renderer.h  mandelbulb_renderer.cpp  mandelbulb_renderer.h  menger_renderer.cpp  menger_renderer.h  renderer.cpp  renderer.h  sierpinski_renderer.cpp  sierpinski_renderer.h
src/shaders/: fs.glsl  julia4d.fs.glsl  mandelbulb.fs.glsl  menger.fs.glsl  sierpinski.fs.glsl  vs.glsl
